# ngtcp2_python

./: .gitignore  README.md  pyproject.toml  setup.py  setup_dev.py
examples/: advanced_practical.py  advanced_usage.py  basic_usage.py
ngtcp2_python/: __init__.py  _build_ffi.py  core.py  version.h  version.py
tests/: test_basic.py
