[build-system]
requires = ["setuptools>=61.0", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngtcp2-python"
version = "0.1.0"
description = "Python bindings for ngtcp2 QUIC library"
readme = "README.md"
authors = [
    {email = "your-email@example.com"},
    {name = "Your Name"}
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
keywords = ["quic", "ngtcp2", "networking", "protocol"]
dependencies = [
    "cffi>=1.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/ngtcp2-python"
Repository = "https://github.com/yourusername/ngtcp2-python.git"
Documentation = "https://ngtcp2-python.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["."]
include = ["ngtcp2_python*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true 